Fix: ecommerce picture alignment

--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,10 @@ h1, .topic-first-sen, .topic-img-card {
     bottom: 0;
     left: 0;
     right: 0;
-    background: url(/../HistoryOfTheInternet/images/ecommerce_bg.jpg) center center;
+    background: url(/../HistoryOfTheInternet/images/ecommerce_bg.jpg);
+        background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     opacity: 0.3;
     width: 100%;
     height: 100%;
